fix: upload image label wrap and add webp format

--- a/src/components/CustomInputImage/customInputImage.module.scss
+++ b/src/components/CustomInputImage/customInputImage.module.scss
@@ -28,5 +28,6 @@
 	&__label {
 		margin: 0;
 		align-self: center;
+		word-wrap: break-word;
 	}
 }
